   inheriting the test case from the other one)
 * updated the database tables and mappers for the new *code* attribute
 * removed the clashing *code* attribute from PipelineStep class and the tables
   and mappers
 * added *Note* class
 * added *notes* table and a mapper for *Note* class
 * added *note* attribute to Entity class

v0.1.1.a1:
 * fixed a couple of documentation errors like:
   * inheritance diagram had references to modules
   * a couple of docstring documentation errors in Structure, User and
     TypeTemplate classes
 * updated the installation instructions
 * added Tutorial page to the documentation
 * all the classes, functions from sqlalchemy are now imported to the
   sqlalchemy namespace, this will let the Sphinx to correctly include classes,
   functions from Stalker only
 * removed the db.meta module, now all the functionalities supplied by db.meta
   are supplied by db (db.meta.session --> db.session etc.)
 * added `query` variable to db module so instead of db.session.query now
   db.query can be used
 * updated login_required decorator function, it now accepts a `view` function
 * added permission_required decorator function
 * name attribute of stalker.core.models.entity.SimpleEntity is not any more
   forced to start with an upper case letter
 * login_name is now a synonym for name in stalker.core.models.user.User
   class and it is not stored in the database any more, just the name attribute
   is stored in the database from now on
 * to make things simpler all the properties with name "type_" is now using the
   name "type" even though it is a Python keyword, Python is clever enough to
   understand what is meant

v0.1.1.a0:
 * changed the versioning scheme a little bit to follow the setuptools guide

v0.1.0.20110111.1:
 * persistence tests for Link is now fixed
 * now every table correctly has a primary_key

v0.1.0.20110110.1:
 * added installation instructions to the documentation
 * updated README file for PyPI